cif/org.eclipse.escet.cif.tests/tests/checks/EdgeNoPartialVarAssignCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:

  ---------------------------------------------
  (1/1) Edge has a partial variable assignment.
  ---------------------------------------------
   * In location "a.l4":
     - edge e do li[0] := 1 goto l5;
                       ^
   * In location "a.l7":
     - edge e do if true: li[0] := 1 end goto l8;
                                ^
   * In automaton "all":
     - edge e do li[0] := 1;
                       ^
     - edge e do li[1] := 2;
                       ^
   * In location "g.A.l4":
     - edge e do li[0] := 1 goto l5;
                       ^
   * In automaton "partial_asgn":
     - edge e do li[0] := 1;
                       ^
     - edge e do if true: li[0] := 1 end;
                                ^
